components/fia-auth/envs/staging/fia-auth.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fia-auth
  namespace: fia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fia-auth
  template:
    metadata:
      labels:
        app: fia-auth
    spec:
      containers:
        - name: fia-auth
          image: ghcr.io/fiaisis/fia-auth@sha256:f25a4da17c36dda59f2b1297d9c521f81e61edd38882f7fe5e47190aeab6d53d
